--- a/src/BaGet.Web/Pages/Package.cshtml
+++ b/src/BaGet.Web/Pages/Package.cshtml
@@ -183,7 +183,7 @@ else
                                 <tr class="@(version.Selected ? "bg-info" : "")" x-show="showAll || @alwaysShow">
                                     <td><a asp-page="Package" asp-route-version="@version.Version">@version.Version.ToNormalizedString()</a></td>
                                     <td>@version.Downloads.ToString("N0")</td>
-                                    <td>@version.LastUpdated.ToShortDateString()</td>
+                                    <td>@version.LastUpdated.ToString("yyyy-MM-dd")</td>
                                 </tr>
                             }
                         </tbody>
